// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should convert php echo tags to echo 1`] = `
"{{!! \\"Cool stuff\\" !!}}
<h1>Awesome</h1>
"
`;

exports[`should convert php long tags to blade directives 1`] = `
"@php
    echo \\"long way there\\";
@endphp
<h1>Awesome</h1>
"
`;

exports[`should convert php short tags to blade directives 1`] = `
"@php
    echo \\"Some to be happy about\\";
@endphp
<h1>Awesome</h1>
"
`;
